fix: vertically align

--- a/baseline.css
+++ b/baseline.css
@@ -62,6 +62,9 @@ main {
   border-radius: 50%;
   position: relative;
   overflow: hidden;
+
+  /* Vertically centre */
+  transform: translateY(calc(50vh - 50%));
 }
 
 #time {
